[project]
name = "agentic-rag"
version = "0.1.0"
description = "Reference implementation scaffolding for an enterprise Agentic RAG stack"
authors = [{name = "Agent", email = "agent@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0"
]

[project.scripts]
agentic-rag = "agentic_rag.cli:app"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
